fix send alarm checkbox

--- a/app/views/healthcheck/edit.html.erb
+++ b/app/views/healthcheck/edit.html.erb
@@ -4,7 +4,7 @@
     <span id="error"></span>
     <p>
     <label class="subtle-label" for="alarm_enabled">Alarm Enabled</label>
-				<%= check_box_tag "record[send_alarm]",@record.send_alarm, :checked=>!!@record.send_alarm  %>
+				<%= check_box_tag "record[send_alarm]",@record.send_alarm, @record.send_alarm  %>
 	   </p>
 
     <p>
