add Cancel button

--- a/app/views/analytics/_new.erb
+++ b/app/views/analytics/_new.erb
@@ -3,7 +3,9 @@
   <div style="width: 250px; background-color: #CCCCCC;">
     <span>Enter Email Address</span><br/><br/>
     <input type="text" name="email" value="" style="width: 150px;" autocomplete="on" />
-    <input type="button" value="Submit" id="email-submit" class="btnAction" />
+    <br/><br/>
+    <input type="button" value="Send" id="email-submit" class="btnAction" />
+    <input type="button" value="Cancel" name="cancel" class="btnAction" />
   </div>
 </div>
 
