--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>BBG IVR</title>
-    <!-- <META HTTP-EQUIV="refresh" CONTENT="60" /> -->
+    <!-- <META HTTP-EQUIV="refresh" CONTENT="600" /> -->
 		<%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag 'application.js' %>
     <%#= javascript_include_tag 'main.js' %>
@@ -56,7 +56,7 @@
     <script>
       jQuery(document).ready(function(){
           homePage.init("content");
-        //  autoRefreshHeader.init();
+          autoRefreshHeader.init();
           blinkeffect('img.red-light');
       });
     </script>
