--- a/app/views/branch/_create.html.erb
+++ b/app/views/branch/_create.html.erb
@@ -49,8 +49,10 @@
   <%= text_field_tag 'branch[feed_limit]', id, :style=>'' %>
   <p></p>
   <label for="branch_country_id">Country </label>
-  <% options = Country.all.map{|b| [b.name, b.id]} %>
-  <%= f.select :country_id, options_for_select(options, 0), :style=>'' %>
+  <% options = Country.all.map{|b| [b.name, b.id]} 
+     id = @branch.country.id
+   %>
+  <%= f.select :country_id, options_for_select(options, id), :style=>'' %>
   <p></p>
 		<label for="branch_is_active">Is Active? </label>
   <% options = [['False', 0], ['True', 1]] %>
