set select forum_type

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -3,29 +3,23 @@
   <div class="select-branch">
     <h4>Select Branch</h4>
     <form action="" method="get">
-						<% options = Branch.where("is_active=1").map{|b| [b.name, b.id]}
+            <% options = Branch.where("is_active=1").map{|b| [b.name, b.id]}
          options.unshift ["--Select Branch--","0"] 
          id = !!@branch ? @branch.id : 0
       %>
       <%= select_tag 'record[id]', options_for_select(options, id), :style=>'' %>
     </form>
-				<%= submit_tag 'Create Branch', :id=>"create", :class=>"create-branch ZbtnAction" %>
+        <%= submit_tag 'Create Branch', :id=>"create", :class=>"create-branch ZbtnAction" %>
   </div>
-		<div id="new-branch" class="float-left">
-  
-  </div>
-		
-		<p id="return-msg" class="notice"></p>
+  <div id="new-branch" class="float-left"></div>
+  <p id="return-msg" class="notice"></p>
+  <%# --
   <p>
   <a id="go-template" class="go-template" href="/templates">Edit Forum</a>
   <span id="go-template-hint" class="go-template-hint"></span>
-	</p>
-		<p>
-			<% warn = "Creating a Forum Result template indicates the Vote/Poll is ended. Continue?" %>
-		<a id="go-template-result" class="go-template" onclick="return confirm('<%= warn %>')" href="/templates">Edit Forum Result</a>
   </p>
-
-
+  -- %>
+  <h3>Select Forum Type</h3>
   <div id="TabbedPanels1" class="TabbedPanels">
     <ul class="TabbedPanelsTabGroup">
       <li id="report" class="TabbedPanelsTab listen" tabindex="0">
@@ -34,26 +28,20 @@
       <li id="vote" class="TabbedPanelsTab publish" tabindex="0">
         <a href="#"><%= Branch.forum_type_ui('vote') %></a>
       </li>
+      <!--
+      <li id="vote_ended" class="TabbedPanelsTab publish" tabindex="0">
+        <a href="#"><%= Branch.forum_type_ui('vote_ended') %></a>
+      </li>
+      -->
       <li id="bulletin" class="TabbedPanelsTab syndicate" tabindex="0">
         <a href="#"><%= Branch.forum_type_ui('bulletin') %></a>
       </li>
     </ul>
-				<!--
-    <div class="TabbedPanelsContentGroup">
-      <div class="TabbedPanelsContent">
-        Report
-      </div>
-      <div class="TabbedPanelsContent">
-        Participate
-      </div>
-      <div class="TabbedPanelsContent">
-        Ask the Community
-      </div>
-    </div>
-				-->
   </div>
+  <div id="audio-player-div" class="float-left"></div>
+  <div id="forum-audio-upload" class="float-left forum-upload helpPopUp"></div>
 </div>
-</div>
+<style></style>
 <script>
   jQuery(document).ready(function(){
       branchManage.init();
