--- a/app/views/branch/_create.html.erb
+++ b/app/views/branch/_create.html.erb
@@ -31,8 +31,9 @@
   <%= f.text_field :client_ip_address, :placeholder=>"" %>
   <p></p>
   <label for="branch_forum_type">Forum&nbsp;Type </label>
-  <% options = forum_options %>
-  <%= f.select :forum_type, options_for_select(options, 0), :style=>'' %>
+  <% options = forum_options 
+     id = @branch.forum_type %>
+  <%= f.select :forum_type, options_for_select(options, id), :style=>'' %>
   <p></p>
   <% id=@branch.feed_source
      options = [['--Select--','0'],['dropbox','dropbox'],['static_rss','static_rss']]
