remove map from healthcheck and restore remember home map position

--- a/app/views/healthcheck/index.html.erb
+++ b/app/views/healthcheck/index.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <h2>Health Check</h2>
-<%= render :partial => 'shared/google_map' %>
+<%#= render :partial => 'shared/google_map' %>
 <%= render :partial => 'search' %>
 <script>
 	 jQuery(document).ready(function(){
