--- a/app/views/analytics/_new.erb
+++ b/app/views/analytics/_new.erb
@@ -11,7 +11,8 @@
 
 <div id="report-form-wrapper">
   <div class="report">
-    <h2><%= @report_name %></h2>
+    <span class='span-h2'><%= @report_name %></span>
+    <span class='link'><a href="/events">View Full Event Logs</span>
     <p id="error" class="error">
       <%= @error %>
     </p>
