--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -8,13 +8,13 @@
     <td class="country">
       <%= e.branch.country.name %>
     </td>
-    <td class="phone">
+    <td class="phone left-nav-bar" data-id="<%= e.branch_id%>" data-url="/analytics">
       <%= @calls[e.branch.id][:total] || 0 %>
     </td>
-    <td class="message left-nav-bar" data-url="/moderation">
+    <td class="message left-nav-bar" data-id="<%= e.branch_id%>" data-url="/moderation">
       <%= @messages[e.branch_id][:total] || 0 %>
     </td>
-    <td class="alert left-nav-bar" data-url="/healthcheck">
+    <td class="alert left-nav-bar" data-id="<%= e.branch_id%>" data-url="/healthcheck">
       <%= e.branch.health_image.html_safe %>
     </td>
   </tr>
