--- a/app/views/templates/_vote.html.erb
+++ b/app/views/templates/_vote.html.erb
@@ -1,2 +1,3 @@
 <div id="introduction" class="square"><span>Intro</span></div>
 <div id="candidate" class="square"><span><%= @question %></span></div>
+<div id="comment" class="square"><span><%= @comment %></span></div>
