--- a/app/views/templates/_vote_result.html.erb
+++ b/app/views/templates/_vote_result.html.erb
@@ -1,2 +1,3 @@
 <div id="introduction_result" class="square">Intro</div>
 <div id="candidate_result" class="square"><%= @question %></div>
+<div id="listen_result" class="square"><%= @listen %></div>
