change to Activate Forum

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -40,7 +40,7 @@
         <a href="#"><%= Branch.forum_type_ui('bulletin') %></a>
       </li>
       <li id="active-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="">
-        <a href="#">Active Forum</a>
+        <a href="#">Activate Forum</a>
       </li>
     </ul>
   </div>
