--- a/app/views/templates/_upload.html.erb
+++ b/app/views/templates/_upload.html.erb
@@ -21,6 +21,10 @@
              id = template.identifier||template.branch.identifier
            %>
           <%= select_tag "#{template.class.name.downcase}[identifier]", options_for_select(options, id), :style=>'' %>
+		   
+           <% if template.name =~ /_result/  %>
+              <%= render :partial=>'vote_stats', :locals=>{:branch=>@template.branch} %>
+           <% end %>	   
 		   <% end %>
 		<%# elsif !template.find_introduction %>
 		  <!--
