sortable entry list

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -49,7 +49,10 @@
   <div id="forum-activate" class="float-left helpPopUp" style="display:none;">
     <%= render :partial=>'activate_forum' %>
   </div>
-  
+  <div>
+  <%# @branch = Branch.find(13) if !@branch %>
+     <%#= render :partial=>'/shared/sortable' if @branch %>
+  </div>
 </div>
 <style></style>
 <script>
