add Save a Forum Result template indicates the Vote/Poll is ended. Continue?

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -20,7 +20,7 @@
   <span id="go-template-hint" class="go-template-hint"></span>
   </p>
   <p>
-  <a id="go-template-result" class="go-template" href="/templates?result=1&branch=Accra" onclick="return confirm('Creating a Forum Result template indicates the Vote/Poll is ended. Continue?')">Edit Forum Result</a>
+  <a id="go-template-result" class="go-template" href="/templates?result=1&branch=Accra">Edit Forum Result</a>
   </p>
   <h3>Select Forum Type</h3>
   <div id="TabbedPanels1" class="TabbedPanels">
