sortable moderation for Edit Forum

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -39,6 +39,7 @@
       <li id="bulletin" class="TabbedPanelsTab syndicate" tabindex="0">
         <a href="#"><%= Branch.forum_type_ui('bulletin') %></a>
       </li>
+      <li style="height:60px;border-left: 1px solid #CCC;"></li>
       <li id="active-forum" class="TabbedPanelsTab syndicate" tabindex="0" data-url="">
         <a href="#">Activate Forum</a>
       </li>
