--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -13,5 +13,6 @@
 <script>
   jQuery(document).ready(function () { 
     reportUpload.init("<%= @branch.forum_type %>");
+    sortable.init(<%= @branch.id %>);
   });
 </script>
