--- a/app/views/templates/_bulletin.html.erb
+++ b/app/views/templates/_bulletin.html.erb
@@ -1,7 +1,7 @@
 <div id="introduction" class="square"><span>Intro</span></div>
 <div id="question" class="square"><span><%= @question %></span></div>
-<div id="listen" class="square"><%= @listen %></div>
-<div id="moderate" class="square">Moderate</div>
+<div id="listen" class="square"><span><%= @listen %></span></div>
+<div id="moderate" class="square"><span>Moderate</span></div>
 <!--
 <div id="record_bulletin_board" class="square"><%= @record_bulletin %></div>
 -->
