--- a/app/views/templates/_vote_result.html.erb
+++ b/app/views/templates/_vote_result.html.erb
@@ -1,4 +1,5 @@
 <div id="introduction_result" class="square">Intro</div>
 <div id="candidate_result" class="square"><%= @question %></div>
 <div id="listen_result" class="square"><%= @listen %></div>
+<div style="width:200px;height:10px;border-top: 1px solid #CCC;"></div>
 <div id="moderate" class="square">Moderate</div>
