let user upload report audio file

--- a/app/views/templates/headline.html.erb
+++ b/app/views/templates/headline.html.erb
@@ -5,7 +5,7 @@
   <div class='notice'>
     <%= flash[:notice] %>
   </div>
-  <% options = [['dropbox','dropbox'],['static_rss','static_rss']]
+  <% options = [['--select--',''],['upload','upload'],['static_rss','static_rss']]
   id = @option.feed_source %>
   
   <h3>Select a Headline News Source:</h3>
