--- a/app/views/shared/_sortable.html.erb
+++ b/app/views/shared/_sortable.html.erb
@@ -1,6 +1,6 @@
 <p style="font-size: 18px"><b><%= @branch.name %></b></p>
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-<%= submit_tag 'Enable/Disable Sorting', :id=>"moderate", :class=>"btnAction", :onclick=>'sortable.toggle();' %>
+<%= submit_tag 'Enable/Disable Sorting', :id=>"moderate-enable", :class=>"btnAction", :onclick=>'sortable.toggle();' %>
 <%= submit_tag 'Save', :id=>"moderate", :class=>"btnAction", :onclick=>'sortable.showIds();' %>
 <br/>
 <p>
@@ -9,7 +9,11 @@ To save the order, click the checkbox of the items and click Save
 </p>
 
 <% 
-   @moderated = SortedEntry.get(@branch.id, @branch.active_forum_session.id)
+   if @branch.forum_type != 'report'
+     @moderated = SortedEntry.get(@branch.id, @branch.active_forum_session.id)
+   else
+     @moderated = []
+   end
    @entries = @moderated + @branch.entries.incomings
  %>
 <ul id="sortable">
@@ -27,9 +31,8 @@ To save the order, click the checkbox of the items and click Save
     <%#= "OK " if e.dropbox_file_exists? %>
     <span class="ui-icon ui-icon-arrowthick-2-n-s"></span>
     <span class="audio-title"><%= e.dropbox_file %> <%= e.created_at.to_s(:db) %>
-    <input type="checkbox" id="M<%= eid %>" value="" <%= 'checked' if e.checked? %> /></span>
-    &nbsp;&nbsp;&nbsp;&nbsp;
-  
+    <input type="checkbox" id="M<%= eid %>" value="" <%= 'checked' if e.checked? %> />
+    </span>&nbsp;&nbsp;&nbsp;&nbsp;
     <a name='<%=eid%>' class="audio {ogg:'/entries/<%=eid%>/play',autoplay:false,volume:1,downloadable:false,inLine:true}"
        href='/entries/<%=eid%>/play'><%= e.dropbox_file %></a>
 
